[package]
name = "aranya-core"
description = "Stable public API for the Aranya runtime"
version = "0.0.1-alpha"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aranya-crypto = { version = "0.14.0", path = "../aranya-crypto", default-features = false }
aranya-policy-ifgen = { version = "0.22.0", path = "../aranya-policy-ifgen" }
aranya-runtime = { version = "0.22.0", path = "../aranya-runtime", default-features = false }

[features]
default = []

libc = ["aranya-runtime/libc"]

std = [
	"aranya-crypto/getrandom",
	"aranya-crypto/std",
	"aranya-runtime/std",
]

low-mem-usage = ["aranya-runtime/low-mem-usage"]

custom-engine = []

memstore = ["aranya-crypto/memstore"]

[dev-dependencies]
anyhow = "1"
postcard = { workspace = true, features = ["alloc"] }

aranya-core = { path = ".", features = ["std", "libc"] }
aranya-crypto = { path = "../aranya-crypto", features = ["std", "alloc", "getrandom", "memstore"] }
aranya-crypto-ffi = { path = "../aranya-crypto-ffi" }
aranya-device-ffi = { path = "../aranya-device-ffi" }
aranya-envelope-ffi = { path = "../aranya-envelope-ffi" }
aranya-idam-ffi = { path = "../aranya-idam-ffi" }
aranya-perspective-ffi = { path = "../aranya-perspective-ffi" }
aranya-policy-compiler = { path = "../aranya-policy-compiler" }
aranya-policy-lang = { path = "../aranya-policy-lang" }
aranya-policy-vm = { path = "../aranya-policy-vm" }


[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["std", "libc", "memstore"]
