[package]
name = "aranya-core"
description = "Stable public API for the Aranya runtime"
version = "0.0.1-alpha"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aranya-crypto = { version = "0.14.0", path = "../aranya-crypto", default-features = false }
aranya-id = { version = "0.2.2", path = "../aranya-id", default-features = false }
aranya-policy-ifgen = { version = "0.22.0", path = "../aranya-policy-ifgen" }
aranya-runtime = { version = "0.22.0", path = "../aranya-runtime", default-features = false }

[features]
default = []

libc = ["aranya-runtime/libc"]

proptest = ["aranya-id/proptest"]

std = [
	"aranya-crypto/getrandom",
	"aranya-crypto/std",
	"aranya-runtime/std",
]

low-mem-usage = ["aranya-runtime/low-mem-usage"]

custom-engine = []

memstore = ["aranya-crypto/memstore"]
