[package]
name = "aranya-core"
description = "Stable public API for the Aranya runtime"
version = "1.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aranya-crypto = { version = "0.14.1", path = "../aranya-crypto", default-features = false }
aranya-id = { version = "0.2.2", path = "../aranya-id", default-features = false }
aranya-policy-ifgen = { version = "0.24.0", path = "../aranya-policy-ifgen", features = ["serde"] }
aranya-runtime = { version = "0.24.0", path = "../aranya-runtime", default-features = false }

[features]
default = []

libc = ["aranya-runtime/libc"]

proptest = ["aranya-id/proptest"]

std = [
	"aranya-crypto/getrandom",
	"aranya-crypto/std",
	"aranya-runtime/std",
]

low-mem-usage = ["aranya-runtime/low-mem-usage"]

custom-engine = []

memstore = ["aranya-crypto/memstore"]
