[package]
name = "aranya-crypto-ffi"
description = "The crypto FFI for Aranya Policy"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]

[features]
default = [
	# NB: currently required.
	"alloc",
]

# Enable allocations.
alloc = []

# Enable std.
std = [
	"alloc",

	"aranya-crypto/std",
	"aranya-policy-vm/std",
	"postcard/use-std",
	"serde/std",
	"thiserror/std",
]

# Enable the `testing` module.
testing = [
	"alloc",

	"dep:serde",
]

[dependencies]
aranya-crypto = { version = "0.6.0", path = "../aranya-crypto", default-features = false, features = ["alloc"] }
aranya-policy-vm = { version = "0.8.0", path = "../aranya-policy-vm", default-features = false, features = ["derive"] }

postcard = { workspace = true, default-features = false, features = ["heapless"] }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# A little bit of a hack: always certain features for tests and
# examples.
aranya-crypto-ffi = { path = ".", features = ["testing"] }

aranya-crypto = { path = "../aranya-crypto", features = ["alloc", "getrandom"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

skip_feature_sets = []

denylist = []
