[package]
name = "aranya-envelope-ffi"
description = "The envelope FFI for Aranya Policy"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = [
	"alloc",
]

# Enable allocations.
alloc = []

# Enable std.
std = [
	"alloc",

	"aranya-crypto/std",
	"aranya-policy-vm/std",
]

[dependencies]
aranya-crypto = { version = "0.12.1", path = "../aranya-crypto", default-features = false, features = ["alloc"] }
aranya-policy-vm = { version = "0.17.0", path = "../aranya-policy-vm", default-features = false, features = ["derive"] }

thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
aranya-crypto = { path = "../aranya-crypto", features = ["alloc", "getrandom"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = [
	"alloc",
]

skip_feature_sets = []

denylist = []
