[package]
name = "aranya-fast-channels"
description = "High throughput, low latency encryption protected by Aranya Policy"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = []

# Enable allocations.
alloc = [
	"aranya-crypto/alloc",
]

# Use the simple CAS-based mutex.
#
# Primarily for testing purposes.
cas_mutex = []

# Use libc.
libc = ["dep:libc"]

# Enable the in-memory state implementation.
memory = [
	"alloc",
]

# Support page-aligned NodeLists.
page-aligned = ["libc"]

# Have POSIX shm_open, etc.
posix = ["libc"]

# Have VxWorks 6.9 sdLib.
sdlib = ["libc"]

# Use std.
std = [
	"alloc",
	"aranya-crypto/std",
	"thiserror/std",
]

# Include testing utilities.
testing = [
	"memory",
	"std",

	"aranya-crypto/test_util",

	"dep:hex",
	"dep:log", # TODO
]

# Use a system provided TRNG for the default CSPRNG.
trng = [
	"aranya-crypto/trng",
]

# Enable unsafe debugging.
#
# This is unsafe because it'll print out cryptographic keys and
# whatnot.
unsafe_debug = [
	"dep:log",
]

# Other features.

allocator_api = ["alloc"]
core_intrinsics = []
try_find = []

[dependencies]
aranya-crypto = { version = "0.2.1", path = "../aranya-crypto", default-features = false, features = ["getrandom"] }
buggy = { version = "0.1.0", default-features = false }

byteorder = { version = "1", default-features = false }
cfg-if = { workspace = true }
const_format = { version = "0.2.31", features = ["assertcp"] }
heapless = { version = "0.7", default-features = false }
# Only enabled by the `testing` feature which already enables
# `std`.
hex = { version = "0.4", default-features = false, features = ["std"], optional = true }
libc = { workspace = true, default-features = false, optional = true }
log = { workspace = true, default-features = false, optional = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
aranya-fast-channels = { path = ".", features = ["testing"] }

criterion = { version = "0.5" }
serial_test = { version = "3.1.1" }

[[bench]]
name = "lib"
harness = false
required-features = ["posix"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
skip_feature_sets = [
	["page-aligned", "libc"],
	["posix", "libc"],
	["std", "alloc"],
]

denylist = [
	# already included when testing
	"testing",
	"std",
	"alloc",
	"memory",

	# It only works on VxWorks.
	"sdlib",

	"unsafe_debug",

	"allocator_api",
	"core_intrinsics",
	"try_find",
]
