[package]
name = "aranya-id"
description = "Aranya ID types"
publish = true
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[lib]
bench = false


[features]
default = []

# Enable `proptest::arbitrary::Arbitrary` implemenations
proptest = ["dep:proptest"]


[dependencies]
spideroak-base58 = { workspace = true, default-features = false }

derive-where = { workspace = true }
paste = { version = "1", default-features = false }
proptest = { workspace = true, default-features = false, optional = true }
rkyv = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
subtle = { version = "2", default-features = false }
zerocopy = { workspace = true, default-features = false }
zerocopy-derive = { workspace = true }


[dev-dependencies]
postcard = { workspace = true, features = ["alloc"] }
serde_json = { version = "1", features = ["alloc"] }


[package.metadata.cargo-machete]
ignored = [
	"zerocopy", # for zerocopy-derive
]
