[package]
name = "aranya-idam-ffi"
description = "The IDAM FFI for Aranya Policy"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["alloc"]

# Enable allocations.
alloc = [
	"aranya-crypto/alloc",
]

# Enable `std`.
std = [
	"alloc",

	"aranya-crypto/std",
	"aranya-policy-vm/std",
	"postcard/use-std",
]

# Enable the testing feature.
testing = []

[dependencies]
aranya-crypto = { version = "0.2.1", path = "../aranya-crypto", default-features = false, features = ["alloc"] }
aranya-policy-vm = { version = "0.3.0", path = "../aranya-policy-vm", features = ["derive"] }
postcard = { workspace = true, default-features = false, features = ["heapless"] }
tracing = { workspace = true }

[dev-dependencies]
aranya-idam-ffi = { path = ".", features = ["testing"] }

aranya-crypto = { path = "../aranya-crypto", features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = [
	"alloc",
	"testing",
]
