[package]
name = "aranya-libc"
description = "A wrapper around parts of libc for Aranya Core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = { workspace = true, default-features = false }
libc = { workspace = true, default-features = false }
memchr = { version = "2.7.2", default-features = false }
tracing = { workspace = true, default-features = false }

[features]
default = []

std = [
	"libc/std",
	"memchr/std",
	"tracing/std",
]

[lints]
workspace = true

[package.metadata.cargo-all-features]
always_include_features = [
	"std",
]
