[package]
name = "aranya-libc"
description = "A wrapper around parts of libc for Aranya Core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = []

std = [
	"libc/std",
	"memchr/std",
	"thiserror/std",
	"tracing/std",
]


[dependencies]
cfg-if = { workspace = true, default-features = false }
errno = { workspace = true, default-features = false }
libc = { workspace = true, default-features = false }
memchr = { version = "2.7.2", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true, default-features = false }


[package.metadata.cargo-all-features]
always_include_features = [
	"std",
]
