[package]
name = "aranya-model"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aranya-crypto = { version = "0.3.0", path = "../aranya-crypto", default-features = false, features = ["alloc", "fs-keystore"] }
aranya-policy-compiler = { version = "0.4.0", path = "../aranya-policy-compiler" }
aranya-policy-lang = { version = "0.2.0", path = "../aranya-policy-lang" }
aranya-policy-vm = { version = "0.4.0", path = "../aranya-policy-vm" }
aranya-runtime = { version = "0.4.0", path = "../aranya-runtime", features = ["testing"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aranya-crypto-ffi = { path = "../aranya-crypto-ffi" }
aranya-device-ffi = { path = "../aranya-device-ffi" }
aranya-envelope-ffi = { path = "../aranya-envelope-ffi" }
aranya-idam-ffi = { path = "../aranya-idam-ffi" }
aranya-perspective-ffi = { path = "../aranya-perspective-ffi" }

postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
tempfile = { version = "3.8.1" }
test-log = { workspace = true }

[lints]
workspace = true
